fixing spacing issues on landing page

--- a/app/assets/stylesheets/missed_connection.css.scss
+++ b/app/assets/stylesheets/missed_connection.css.scss
@@ -33,13 +33,14 @@
 .missed-connection.date {
 	font-size: 11px;
 	padding: 0px 0px 0px 0px;
-	margin: 0px 0px -9px 1px;
+	margin: 0px 0px -16px 1px;
 	color: #51C0A6;
 	position: inherit;
 }
 
 .missed-connection.text-center {
 	position: inherit;
+	font-size: 71%;
 }
 
 .new-missed-connection {
